kubernetes/apps/database/pgadmin/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: database
  annotations:
    #external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: simple-icons:adminer
spec:
  ingressClassName: internal
  rules:
    - host: "pgadmin.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-pgadmin4
                port:
                  number: 80
  tls:
    - hosts:
        - "pgadmin.${SECRET_DOMAIN}"
